refactor: fix class naming, clean metadata comments, add missing Javadoc
Class renames (Test/Tester suffix/prefix → Demo):
- ProtobufTest → ProtobufDemo
- DirectByteBufferTest → DirectByteBufferDemo
- TestByteBuffer → ByteBufferDemo
- MapTest → MapDemo
- UuidTest → UuidDemo
- LocaleTest → LocaleDemo
- StringTest → StringDemo

Clean 70 files: remove @author/@date metadata-only Javadoc blocks
(fixed regex to handle 'since' keyword variant)

Add missing class-level Chinese Javadoc to 23 files across all modules

All modules: BUILD SUCCESS